--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/runner/runner"
+        "url": "https://github.com/runner/runner.git"
     },
     "bin": {
         "runner": "./bin/cli.js"
