rename and remove scoped packages

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     },
     "dependencies": {
         "cjs-runner": "^1.5.1",
-        "@runner/logger": "^1.0.0",
         "chokidar": "^2.0.4",
-        "commander": "^2.16.0"
+        "commander": "^2.16.0",
+        "runner-logger": "^1.0.0"
     },
     "devDependencies": {
         "cjs-eslint": "^1.1.1"
