--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "bin": {
         "runner": "./bin/cli.js"
     },
+    "type": "module",
     "scripts": {
         "lint": "eslint .",
         "test": "npm run lint"
     },
     "dependencies": {
         "cjs-runner": "^1.5.1",
-        "chokidar": "^3.0.0",
-        "commander": "^2.20.0",
+        "chokidar": "^3.5.3",
+        "commander": "^8.3.0",
         "runner-logger": "^2.0.0"
     },
     "devDependencies": {
-        "cjs-eslint": "^1.2.4"
+        "cjs-eslint": "^2.1.0"
     },
     "keywords": [
         "task",
