--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "runner",
-    "version": "4.0.0",
+    "version": "4.0.1",
     "description": "Simple task runner.",
     "author": {
         "name": "Stanislav Kalashnik",
@@ -14,6 +14,7 @@
         "runner": "./bin/cli.js"
     },
     "type": "module",
+    "main": "index.js",
     "scripts": {
         "lint": "eslint .",
         "test": "npm run lint"
